--- a/app/src/main/res/layout/fragment_forget_pwd_by_email.xml
+++ b/app/src/main/res/layout/fragment_forget_pwd_by_email.xml
@@ -22,6 +22,6 @@
         android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/y37"
-        android:text="确认" />
+        android:text="@string/Button_Sure" />
 
 </RelativeLayout>
