--- a/app/src/main/res/layout/layout_dialog_share_wonderful.xml
+++ b/app/src/main/res/layout/layout_dialog_share_wonderful.xml
@@ -18,23 +18,47 @@
             android:id="@+id/tv_share_to_timeline"
             android:layout_width="match_parent"
             android:layout_height="@dimen/y48"
-            android:drawableLeft="@drawable/icon_friend"
-            android:drawablePadding="@dimen/x20"
+            android:drawableStart="@drawable/icon_friend"
+            android:drawablePadding="@dimen/y20"
             android:gravity="center_vertical"
-            android:paddingLeft="@dimen/x20"
-            android:paddingRight="@dimen/x20"
-            android:text="朋友圈" />
+            android:paddingStart="@dimen/y20"
+            android:paddingEnd="@dimen/y20"
+            android:text="@string/we_friends" />
 
         <TextView
             android:clickable="true"
             android:id="@+id/tv_share_to_wechat_friends"
             android:layout_width="match_parent"
             android:layout_height="@dimen/y48"
-            android:drawableLeft="@drawable/icon_wechat"
+            android:drawableStart="@drawable/icon_wechat"
+            android:drawablePadding="@dimen/y20"
+            android:gravity="center_vertical"
+            android:paddingStart="@dimen/y20"
+            android:paddingEnd="@dimen/y20"
+            android:text="@string/wechat" />
+
+        <TextView
+            android:clickable="true"
+            android:id="@+id/tv_share_to_twitter_friends"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/y48"
+            android:drawableStart="@drawable/twitter_icon_twitter"
+            android:drawablePadding="@dimen/y20"
+            android:gravity="center_vertical"
+            android:paddingStart="@dimen/y20"
+            android:paddingEnd="@dimen/y20"
+            android:text="@string/twitter" />
+
+        <TextView
+            android:clickable="true"
+            android:id="@+id/tv_share_to_facebook_friends"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/y48"
+            android:drawableStart="@drawable/share_icon_facebook"
             android:drawablePadding="@dimen/x20"
             android:gravity="center_vertical"
-            android:paddingLeft="@dimen/x20"
-            android:paddingRight="@dimen/x20"
-            android:text="微信" />
+            android:paddingStart="@dimen/x20"
+            android:paddingEnd="@dimen/x20"
+            android:text="@string/facebook" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
