--- a/app/src/main/res/layout/fragment_bind_camera.xml
+++ b/app/src/main/res/layout/fragment_bind_camera.xml
@@ -40,7 +40,7 @@
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/y240"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:background="@drawable/image_camera">
 
