--- a/app/src/main/res/layout/fragment_cloud_live_videochat_connect.xml
+++ b/app/src/main/res/layout/fragment_cloud_live_videochat_connect.xml
@@ -56,7 +56,7 @@
                 android:drawableTop="@drawable/btn_dismiss"
                 android:textColor="#5a6a7d"
                 android:textSize="@dimen/sp14"
-                android:text="@string/EFAMILY_IGNORE"
+                android:text="@string/IGNORE"
                 android:drawablePadding="@dimen/x4"
                 android:gravity="center_horizontal"
                 android:layout_width="wrap_content"
@@ -68,7 +68,7 @@
                 android:drawableTop="@drawable/btn_listen"
                 android:textColor="#5a6a7d"
                 android:textSize="@dimen/sp14"
-                android:text="@string/EFAMILY_CALL_ANSWER"
+                android:text="@string/ANSWER"
                 android:drawablePadding="@dimen/x4"
                 android:gravity="center_horizontal"
                 android:layout_width="wrap_content"
