--- a/app/src/main/res/layout/layout_bell_call_list_item.xml
+++ b/app/src/main/res/layout/layout_bell_call_list_item.xml
@@ -8,23 +8,7 @@
     card_view:cardCornerRadius="@dimen/y5"
     card_view:cardBackgroundColor="@android:color/white">
 
-    <FrameLayout
-        android:id="@+id/imgv_bell_call_item_cover"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="visible">
 
-        <View
-            android:background="@color/color_7FFFFFFF"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:padding="@dimen/y10"
-            android:src="@drawable/doorbell_icon_check" />
-    </>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -88,4 +72,18 @@
             android:textColor="@color/color_CBCFD0"
             android:textSize="@dimen/sp13" />
     </LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/imgv_bell_call_item_cover"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/color_7FFFFFFF"
+        android:visibility="visible">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:padding="@dimen/y10"
+            android:src="@drawable/doorbell_icon_check" />
+    </FrameLayout>
 </android.support.v7.widget.CardView>
