--- a/app/src/main/res/layout/layout_dialog_low_battery.xml
+++ b/app/src/main/res/layout/layout_dialog_low_battery.xml
@@ -9,6 +9,7 @@
 <android.support.v7.widget.CardView
     android:layout_width="match_parent"
     app:cardCornerRadius="9dp"
+    android:background="@color/color_white"
     android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
